--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -12,9 +16,44 @@
     text-decoration: underline;
 }
 
+
+
 .box {
     width: 30%;
     border: 1px solid black;
     border-radius: 5px;
     margin: 5px;
+    padding: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+    .container {
+        width: 90%;
+    }
+
+    .box {
+        width: 100%;
+    }
+}
+
+
+@media only screen and (min-width: 600px) {
+    .container {
+        width: 90%;
+    }
+
+    .box {
+        width: 45%;
+    }
+}
+
+
+@media only screen and (min-width: 768px) {
+    .container {
+        width: 80%;
+    }
+
+    .box {
+        width: 30%;
+    }
 }
