added a new media query

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,16 @@
 
 @media only screen and (min-width: 768px) {
     .container {
+        width: 90%;
+    }
+
+    .box {
+        width: 40%;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .container {
         width: 80%;
     }
 
